log
Sun Mar 13 19:43:28 UTC 2022: 
 tests:  0|7
total_score: 0/70
5528e2f
Sun Mar 13 19:49:36 UTC 2022: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:47:10: error: ‘return’ with a value, in function returning void [-Werror]
   return total;
          ^~~~~
exercises.c:39:6: note: declared here
 void sumaNultimos(int a[], int n, int m, int * suma) {
      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3620af4
Sun Mar 13 19:51:30 UTC 2022: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
1e9bb8a
Sun Mar 13 19:57:40 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
4feea18
Sun Mar 13 20:02:42 UTC 2022: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:70:17: error: invalid initializer
   Persona ptr = &datos;
                 ^
exercises.c:71:11: error: incompatible types when returning type ‘Persona {aka struct <anonymous>}’ but ‘Persona * {aka struct <anonymous> *}’ was expected
    return ptr
           ^~~
exercises.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
574959c
Sun Mar 13 20:03:30 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
6a6067f
Sun Mar 13 20:06:42 UTC 2022: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:68:8: error: invalid type argument of ‘->’ (have ‘Persona {aka struct <anonymous>}’)
   datos->edad = edad;
        ^~
Compilation failed
30c9aa1
Sun Mar 13 20:07:30 UTC 2022: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:66:15: error: ‘datos’ is a pointer; did you mean to use ‘->’?
   strcpy(datos.nombre, nombre);
               ^
               ->
exercises.c:67:15: error: ‘datos’ is a pointer; did you mean to use ‘->’?
   strcpy(datos.rut, rut);
               ^
               ->
exercises.c:68:8: error: ‘datos’ is a pointer; did you mean to use ‘->’?
   datos.edad = edad;
        ^
        ->
Compilation failed
e378ee3
Sun Mar 13 20:08:18 UTC 2022: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘crearPersona’:
exercises.c:66:10: error: ‘datos’ is used uninitialized in this function [-Werror=uninitialized]
   strcpy(datos->nombre, nombre);
          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
7bc95bf
Sun Mar 13 20:09:42 UTC 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
31fee2e
Sun Mar 13 20:12:02 UTC 2022: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
09256d7
